Remove Lovable branding and update project metadata

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>capital-city-forecast</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Capital City Forecast - Прогноз погоды в Москве</title>
+    <meta name="description" content="Веб-приложение для просмотра текущего прогноза погоды в Москве с авторизацией пользователя" />
+    <meta name="author" content="Weather Forecast App" />
 
-    <meta property="og:title" content="capital-city-forecast" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Capital City Forecast - Прогноз погоды в Москве" />
+    <meta property="og:description" content="Веб-приложение для просмотра текущего прогноза погоды в Москве с авторизацией пользователя" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://securiumsss.github.io/capital-city-forecast/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@weather_forecast" />
+    <meta name="twitter:image" content="https://securiumsss.github.io/capital-city-forecast/og-image.png" />
   </head>
 
   <body>
@@ -22,8 +22,7 @@
     
 
     
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
